[package]
name = "kaos"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
description = "Chaotic testing harness"
repository = "https://github.com/vertexclique/kaos"
documentation = "https://docs.rs/kaos"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"
exclude = [
	".github/*",
	"examples/*",
	"graphstore/*",
	"tests/*",
	"img/*",
	"ci/*",
	"benches/*",
	"doc/*",
	"*.png",
	"*.dot",
	"*.yml",
	"*.toml",
	"*.md"
]


[features]
diff = ["dissimilar"]

[dependencies]
dissimilar = { version = "1.0", optional = true }
glob = "0.3"
lazy_static = "1.3"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.0.4"
toml = "0.5.2"
fail = "0.3"
humantime = "2.0.0"
proptest = "0.9.5"